--- a/client/components/scss/Wizard.scss
+++ b/client/components/scss/Wizard.scss
@@ -4,7 +4,7 @@
   margin-top: 80px;
   overflow: hidden;
 }
-.Wizard {
+.WizardContainer__Wizard {
   display: flex;
   flex-flow: row nowrap;
   justify-content: start;
